--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/flex": "^1.1",
         "symfony/form": "4.1.*",
         "symfony/framework-bundle": "4.1.*",
+        "symfony/twig-bundle": "4.1.*",
         "symfony/yaml": "4.1.*"
     },
     "require-dev": {
