--- a/.env
+++ b/.env
@@ -10,3 +10,14 @@ APP_SECRET=c4a76133a944581c39af8401b32963fc
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://root:123456@127.0.0.1:3306/blog
+###< doctrine/doctrine-bundle ###
+
+AUTH0_CLIENT_ID=muqcINGokB8GMTkEpe0VTPE5VbgytlPI
+AUTH0_CLIENT_SECRET=SqFNw2_4gjbysxHuGv4VsRBVsvIz5ucNsBythr-PsJ6_Q5SGkXneQu7-ftHI-ON5
+AUTH0_DOMAIN=shaqianqian.eu.auth0.com
