--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,17 @@
         "symfony/flex": "^1.1",
         "symfony/form": "4.1.*",
         "symfony/framework-bundle": "4.1.*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/translation": "4.1.*",
         "symfony/twig-bundle": "4.1.*",
         "symfony/yaml": "4.1.*"
+
+
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/dotenv": "4.1.*",
+        "symfony/maker-bundle": "^1.9",
         "symfony/web-server-bundle": "4.1.*"
     },
     "config": {
